--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,34 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
-author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+title: Jooyoung Oh
+subtitle: Portfolio
+email: JooyoungOh2026@u.northwestern.edu
+description: Welcome to my portfolio!<br/> Feel free to check out some of my work.
+baseurl: # the subpath of your site, e.g. /blog
+url: 'https://7ooyoungoh.github.io' # the base hostname & protocol for your site
+author: Jooyoung Oh
+street_address: https://github.com/7ooyoungoh
+city:
+state:
+zip_code:
+country:
+phone: https://www.linkedin.com/in/jooyoung-oh
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
-tiles-count: 6
+tiles-count: 2
 
 # social settings (key must match name of font awesome icon)
 # see https://fontawesome.com/icons?d=gallery&p=2&s=brands
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
-  GitHub: https://github.com/andrewbanchich
+  GitHub: https://github.com/7ooyoungoh
   GitLab:
-  Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
-  Instagram:
-  LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-  Twitter: https://twitter.com/andrewbanchich
-  Facebook:
+  Google-Plus:
+  Instagram: https://www.instagram.com/7oo.oh/
+  LinkedIn: https://www.linkedin.com/in/joooyoung-oh
+  Twitter:
+  Facebook: https://www.facebook.com/jooyoung.oh.102/z
   Slack:
 
 # build settings
