--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Jooyoung
+title: Jooyoung Oh
 subtitle: Portfolio
 email: JooyoungOh2026@u.northwestern.edu
 description: Welcome to my portfolio!<br/> Feel free to check out some of my work.
