Update GitHub link

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Portfolio
 email: JooyoungOh2026@u.northwestern.edu
 description: Welcome to my online portfolio!<br/> Feel free to check out some of my work.
 baseurl: # the subpath of your site, e.g. /blog
-url: 'https://7ooyoungoh.github.io' # the base hostname & protocol for your site
+url: 'https://joodevs.github.io' # the base hostname & protocol for your site
 author: Jooyoung Oh
 street_address: https://github.com/joodevs
 city:
